--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -8,8 +8,11 @@ on:
 jobs:
   scan:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # Required to push commits
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
       
       - uses: actions/setup-python@v5
         with:
