--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,9 @@ anthropic>=0.39.0
 # Environment variable management
 python-dotenv>=1.0.0
 
+# Sentiment analysis for coding assistants
+nltk>=3.8.0
+
 # Optional: for scheduling (cloud deployment)
 # apscheduler>=3.10.0
 
