--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -13,6 +13,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0
       
       - uses: actions/setup-python@v5
         with:
@@ -31,9 +34,12 @@ jobs:
         run: python generate_html.py
       
       - name: Commit results
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config user.name "AI News Bot"
           git config user.email "bot@example.com"
+          git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
           git add output/ docs/index.html
           git commit -m "Daily scan $(date +%Y-%m-%d)" || exit 0
-          git push
+          git push origin HEAD:main
