--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,7 @@ nltk>=3.8.0
 # Optional: for web interface
 # fastapi>=0.109.0
 # uvicorn>=0.27.0
+
+# Note: Reddit collector uses public JSON API (no auth required)
+# Note: Twitter collector requires TWITTER_BEARER_TOKEN environment variable
+#       Get your bearer token from: https://developer.twitter.com/en/portal/dashboard
